include classification result in JSON response